welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	for (i <-0 to length-1) {
	if (value == lookingFor) return value
	else return -1
		
	}



}
